tests/miniJava/neg/000180_mutation.MiniJava
class java { public static Main void ( String [ ] java ) { { } } }
